@startuml

title __LAB6's Class Diagram__\n

  namespace  {
    namespace ab6 {
      class Lab6.Course {
          - courseNum : String
          - name : String
          + Course()
          + Course()
          + getCourseNum()
          + getGradeValue()
          + getLetterGrade()
          + getName()
          + setCourseNum()
          + setGrade()
          + setName()
      }
    }
  }
  

  namespace  {
    namespace ab6 {
      class Lab6.Grade {
          - letter : String
          - number : double
          + Grade()
          + Grade()
          + getLetter()
          + getNumber()
          + setLetter()
      }
    }
  }
  

  namespace  {
    namespace ab6 {
      class Lab6.Lab6Test {
          {static} + main()
      }
    }
  }
  

  namespace  {
    namespace ab6 {
      class Lab6.ReportCard {
          - courses : ArrayList<Course>
          + ReportCard()
          + ReportCard()
          + calculateGPA()
          + toString()
      }
    }
  }
  

  namespace  {
    namespace ab6 {
      class Lab6.Student {
          - id : String
          - name : String
          + Student()
          + Student()
          + getID()
          + getName()
          + setID()
          + setName()
      }
    }
  }
  

  Lab6.Course o-- Lab6.Grade : grade
  Lab6.ReportCard o-- Lab6.Student : stu


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
